 $ [#21265] [patch] Inserting new weblink in backend describes new newsfeeds ordering
 # [#21244] Unable to change "Linked User" to "No User" in Contacts. Thanks Bill.
 # [#21272] * Checkall broken for contacts, cache, languages. messages

01-Jul-2010 Andrew Eddie
 # Fixed issue [#21056] Trashing module leaves an erroneous entry in module position dropdown lists

01-Jul-2010 Christophe Demko
 # Fix an error in core-uncompressed.js code for ie7/ie8

30-Jun-2010 Ian MacLennan
 # [#21126] Token Error on Installation
 # [#20964] Token error on logon
 # [#21150] Restore 1.5 ability for multiple categories for banner module
 # [#21212] Head tags for mod_articles_categories
 # [#21248] Add keepalive functionality to Hathor that was added to core layout in 21197
 # [#20750] The HTML meta tag for the http-equiv content-type doesn't reflect the mime type stored in JDocument
 # [#21237] Typo in JInstaller causes unit tests to fail
 # [#21238] Error in JInstaller
 # [#21183] Failing JString unit test

30-Jur-2010 Mark Dexter
 # Assets table for uncategorised categories in sample data (Elin Waring)

30-Jun-2010 Jean-Marie Simonet
 # [#21169] "Save & New" toolbar button in "Templates Manager: Edit Style" saves an empty template. Thanks Joseph
 # [#21170] Changes made in description after toggling the editor are not saved. Thanks CY Lee.
 $ [#21257] Inaccurate string in contact. Thanks Elin.
 $ Correcting key typo.
 # [#21255] Module modal - missing module assignment description. Thanks Bill.
 # [#21217] [patch] Hathor RTL menu issues. Thanks Andrea.
 $ Deleting a bunch of hardcoded colons

29-Jun-2010 Ian MacLennan
 # [#20959] Single Newsfeed Display Options parameters
 # [#21125] Article manager - view created by - details
 # [#21187] Template styles filter does not display admin templates
 + [#21028] Add function that returns the current documents MIME type
 # [#20871] Print view page navigation

29-Jun-2010 Jean-Marie Simonet