@@ -85,7 +85,7 @@ class JFormFieldUser extends JFormField
 		$html[] = '  <div class="blank">';
 		$html[] = '		<a class="modal_'.$this->id.'" title="'.JText::_('JLIB_FORM_CHANGE_USER').'"' .
 							' href="'.($this->element['readonly'] ? '' : $link).'"' .
-							' rel="{handler: \'iframe\', size: {x: 650, y: 375}}">';
+							' rel="{handler: \'iframe\', size: {x: 800, y: 500}}">';
 		$html[] = '			'.JText::_('JLIB_FORM_CHANGE_USER').'</a>';
 		$html[] = '  </div>';
 		$html[] = '</div>';
