@@ -36,6 +36,7 @@ $ -> Language fix or change
  # Fixed issue [#21056] Trashing module leaves an erroneous entry in module position dropdown lists
 
 01-Jul-2010 Christophe Demko
+ # Fixed issue [#21269] *User modal forces horizontal scrolling. Search field size too big
  # Fix an error in core-uncompressed.js code for ie7/ie8
 
 30-Jun-2010 Ian MacLennan
